# Rast-3dmhd-flux

./: .gitignore  3dmhd-flux.f90  3dmhd.f  3dmhd.f.ue  3dmhdparam.f  3dmhdset.f  3dmhdset.f.ue  3dmhdsub.f  3dmhdsub.f.ue  README.md  dump_common_data.py  find_involved_subroutines.py  get_runtime_functions.py  load_functions.py  makefile  migrate_to_upstream.py  openacc.py  parse.py  parser_io.py  pyproject.toml  side_effects.py  transpile.py
mpif/: mpif-config.h  mpif-sizeof.h
output/: 3dmhd.f  3dmhdset.f  3dmhdsub.f
parser/: Fortran77Lexer.g4  Fortran77Lexer.interp  Fortran77Lexer.py  Fortran77Parser.g4  Fortran77Parser.interp  Fortran77Parser.py  Fortran77ParserListener.py  Fortran77ParserVisitor.py  Fortran77Visitor.py  generate.sh
