[tool.poetry]
name = "rast-3dmhd-flux"
version = "0.1.0"
description = ""
authors = ["kashun <kashun@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fparser = "^0.1.3"
antlr4-tools = "^0.2.1"
antlr4-python3-runtime = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
